chatbot/chatbot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot
  namespace: metopia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      containers:
        - name: chatbot
          image: 'ghcr.io/meta-metopia/chatbot:v1.1.1'
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "200m"
          ports:
            - name: server-port
              containerPort: 8080
              protocol: TCP
          command: ["./Run", "serve", "--hostname", "0.0.0.0", "--port", "8080"]
      restartPolicy: Always
