chatbot/chatbot-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-service
  namespace: metopia
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: chatbot
