chatbot/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-ingress
  namespace: metopia
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - metopia.co
      secretName: ingress-secret
  rules:
    - host: chat.metopia.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatbot-service
                port:
                  number: 80
